--- a/openApiDocs/v1.0/Identity.Partner.yml
+++ b/openApiDocs/v1.0/Identity.Partner.yml
@@ -10,8 +10,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminCustomer
-      summary: Get delegatedAdminCustomers from tenantRelationships
-      description: The customer who has a delegated admin relationship with a Microsoft partner.
+      summary: List delegatedAdminCustomers
+      description: Get a list of the delegatedAdminCustomer objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/tenantrelationship-list-delegatedadmincustomers?view=graph-rest-1.0
       operationId: tenantRelationship_ListDelegatedAdminCustomer
       parameters:
         - $ref: '#/components/parameters/top'
@@ -84,8 +87,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminCustomer
-      summary: Get delegatedAdminCustomers from tenantRelationships
-      description: The customer who has a delegated admin relationship with a Microsoft partner.
+      summary: Get delegatedAdminCustomer
+      description: Read the properties of a delegatedAdminCustomer object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadmincustomer-get?view=graph-rest-1.0
       operationId: tenantRelationship_GetDelegatedAdminCustomer
       parameters:
         - name: delegatedAdminCustomer-id
@@ -187,8 +193,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminCustomer
-      summary: Get serviceManagementDetails from tenantRelationships
-      description: Contains the management details of a service in the customer tenant that's managed by delegated administration.
+      summary: List serviceManagementDetails
+      description: Get a list of the delegatedAdminServiceManagementDetail objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadmincustomer-list-servicemanagementdetails?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminCustomer_ListServiceManagementDetail
       parameters:
         - name: delegatedAdminCustomer-id
@@ -441,8 +450,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Get delegatedAdminRelationships from tenantRelationships
-      description: The details of the delegated administrative privileges that a Microsoft partner has in a customer tenant.
+      summary: List delegatedAdminRelationships
+      description: Get a list of the delegatedAdminRelationship objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/tenantrelationship-list-delegatedadminrelationships?view=graph-rest-1.0
       operationId: tenantRelationship_ListDelegatedAdminRelationship
       parameters:
         - $ref: '#/components/parameters/top'
@@ -492,7 +504,11 @@ paths:
     post:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Create new navigation property to delegatedAdminRelationships for tenantRelationships
+      summary: Create delegatedAdminRelationship
+      description: Create a new delegatedAdminRelationship object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/tenantrelationship-post-delegatedadminrelationships?view=graph-rest-1.0
       operationId: tenantRelationship_CreateDelegatedAdminRelationship
       requestBody:
         description: New navigation property
@@ -515,8 +531,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Get delegatedAdminRelationships from tenantRelationships
-      description: The details of the delegated administrative privileges that a Microsoft partner has in a customer tenant.
+      summary: Get delegatedAdminRelationship
+      description: Read the properties of a delegatedAdminRelationship object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-get?view=graph-rest-1.0
       operationId: tenantRelationship_GetDelegatedAdminRelationship
       parameters:
         - name: delegatedAdminRelationship-id
@@ -560,7 +579,11 @@ paths:
     patch:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Update the navigation property delegatedAdminRelationships in tenantRelationships
+      summary: Update delegatedAdminRelationship
+      description: "Update the properties of a delegatedAdminRelationship object.  The following restrictions apply:\n- You can update this relationship when its status property is created.\n- You can update the autoExtendDuration property when status is either created or active.\n- You can only remove the Microsoft Entra Global Administrator role when the status property is active, which indicates a long-running operation."
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-update?view=graph-rest-1.0
       operationId: tenantRelationship_UpdateDelegatedAdminRelationship
       parameters:
         - name: delegatedAdminRelationship-id
@@ -591,7 +614,11 @@ paths:
     delete:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Delete navigation property delegatedAdminRelationships for tenantRelationships
+      summary: Delete delegatedAdminRelationship
+      description: 'Delete a delegatedAdminRelationship object. A relationship can only be deleted if it''s in the ''created'' status. '
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-delete?view=graph-rest-1.0
       operationId: tenantRelationship_DeleteDelegatedAdminRelationship
       parameters:
         - name: delegatedAdminRelationship-id
@@ -618,8 +645,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Get accessAssignments from tenantRelationships
-      description: The access assignments associated with the delegated admin relationship.
+      summary: List accessAssignments
+      description: Get a list of the delegatedAdminAccessAssignment objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-list-accessassignments?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_ListAccessAssignment
       parameters:
         - name: delegatedAdminRelationship-id
@@ -677,7 +707,11 @@ paths:
     post:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Create new navigation property to accessAssignments for tenantRelationships
+      summary: Create accessAssignments
+      description: Create a new delegatedAdminAccessAssignment object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-post-accessassignments?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_CreateAccessAssignment
       parameters:
         - name: delegatedAdminRelationship-id
@@ -709,8 +743,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Get accessAssignments from tenantRelationships
-      description: The access assignments associated with the delegated admin relationship.
+      summary: Get delegatedAdminAccessAssignment
+      description: Read the properties of a delegatedAdminAccessAssignment object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminaccessassignment-get?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_GetAccessAssignment
       parameters:
         - name: delegatedAdminRelationship-id
@@ -762,7 +799,11 @@ paths:
     patch:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Update the navigation property accessAssignments in tenantRelationships
+      summary: Update delegatedAdminAccessAssignment
+      description: Update the properties of a delegatedAdminAccessAssignment object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminaccessassignment-update?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_UpdateAccessAssignment
       parameters:
         - name: delegatedAdminRelationship-id
@@ -801,7 +842,11 @@ paths:
     delete:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Delete navigation property accessAssignments for tenantRelationships
+      summary: Delete delegatedAdminAccessAssignment
+      description: Delete a delegatedAdminAccessAssignment object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminaccessassignment-delete?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_DeleteAccessAssignment
       parameters:
         - name: delegatedAdminRelationship-id
@@ -858,8 +903,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Get operations from tenantRelationships
-      description: The long running operations associated with the delegated admin relationship.
+      summary: List operations
+      description: Get a list of the delegatedAdminRelationshipOperation objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-list-operations?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_ListOperation
       parameters:
         - name: delegatedAdminRelationship-id
@@ -949,8 +997,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Get operations from tenantRelationships
-      description: The long running operations associated with the delegated admin relationship.
+      summary: Get delegatedAdminRelationshipOperation
+      description: Read the properties of a delegatedAdminRelationshipOperation object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationshipoperation-get?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_GetOperation
       parameters:
         - name: delegatedAdminRelationship-id
@@ -1098,8 +1149,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Get requests from tenantRelationships
-      description: The requests associated with the delegated admin relationship.
+      summary: List requests
+      description: Get a list of the delegatedAdminRelationshipRequest objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-list-requests?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_ListRequest
       parameters:
         - name: delegatedAdminRelationship-id
@@ -1157,7 +1211,11 @@ paths:
     post:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Create new navigation property to requests for tenantRelationships
+      summary: Create requests
+      description: Create a new delegatedAdminRelationshipRequest object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationship-post-requests?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_CreateRequest
       parameters:
         - name: delegatedAdminRelationship-id
@@ -1189,8 +1247,11 @@ paths:
     get:
       tags:
         - tenantRelationships.delegatedAdminRelationship
-      summary: Get requests from tenantRelationships
-      description: The requests associated with the delegated admin relationship.
+      summary: Get delegatedAdminRelationshipRequest
+      description: Read the properties and relationships of a delegatedAdminRelationshipRequest object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/delegatedadminrelationshiprequest-get?view=graph-rest-1.0
       operationId: tenantRelationship.delegatedAdminRelationship_GetRequest
       parameters:
         - name: delegatedAdminRelationship-id
@@ -1604,6 +1665,7 @@ components:
       enum:
         - delegatedAdminAccessAssignmentUpdate
         - unknownFutureValue
+        - delegatedAdminRelationshipUpdate
       type: string
     microsoft.graph.longRunningOperationStatus:
       title: longRunningOperationStatus
