--- a/openApiDocs/v1.0/Users.yml
+++ b/openApiDocs/v1.0/Users.yml
@@ -73,11 +73,11 @@ paths:
     post:
       tags:
         - users.user
-      summary: Create user
-      description: Create a new user object.
+      summary: Create User
+      description: "Create a new user.\nThe request body contains the user to create. At a minimum, you must specify the required properties for the user. You can optionally specify any other writable properties."
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/intune-mam-user-create?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/user-post-users?view=graph-rest-1.0
       operationId: user_CreateUser
       requestBody:
         description: New entity
@@ -183,11 +183,11 @@ paths:
     delete:
       tags:
         - users.user
-      summary: Delete user
-      description: Deletes a user.
+      summary: Delete a user
+      description: 'Delete user.   When deleted, user resources are moved to a temporary container and can be restored within 30 days.  After that time, they are permanently deleted.  To learn more, see deletedItems.'
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/intune-onboarding-user-delete?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/user-delete?view=graph-rest-1.0
       operationId: user_DeleteUser
       parameters:
         - name: user-id
@@ -1527,8 +1527,11 @@ paths:
     get:
       tags:
         - users.directoryObject
-      summary: Get manager from users
-      description: The user or contact that is this user's manager. Read-only. Supports $expand.
+      summary: List manager
+      description: 'Returns the user or organizational contact assigned as the user''s manager. Optionally, you can expand the manager''s chain up to the root node.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-list-manager?view=graph-rest-1.0
       operationId: user_GetManager
       parameters:
         - name: user-id
@@ -1573,8 +1576,11 @@ paths:
     get:
       tags:
         - users.directoryObject
-      summary: Get ref of manager from users
-      description: The user or contact that is this user's manager. Read-only. Supports $expand.
+      summary: List manager
+      description: 'Returns the user or organizational contact assigned as the user''s manager. Optionally, you can expand the manager''s chain up to the root node.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-list-manager?view=graph-rest-1.0
       operationId: user_GetManagerGraphBPreRef
       parameters:
         - name: user-id
@@ -1598,7 +1604,11 @@ paths:
     put:
       tags:
         - users.directoryObject
-      summary: Update the ref of navigation property manager in users
+      summary: Assign manager
+      description: Assign a user's manager.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-post-manager?view=graph-rest-1.0
       operationId: user_SetManagerGraphBPreRef
       parameters:
         - name: user-id
@@ -1620,7 +1630,11 @@ paths:
     delete:
       tags:
         - users.directoryObject
-      summary: Delete ref of navigation property manager for users
+      summary: Remove manager
+      description: Remove a user's manager.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-delete-manager?view=graph-rest-1.0
       operationId: user_DeleteManagerGraphBPreRef
       parameters:
         - name: user-id
@@ -1647,8 +1661,11 @@ paths:
     get:
       tags:
         - users.directoryObject
-      summary: Get memberOf from users
-      description: The groups and directory roles that the user is a member of. Read-only. Nullable. Supports $expand.
+      summary: List a user's direct memberships
+      description: 'Get groups, directory roles, and administrative units that the user is a direct member of. This operation isn''t transitive. To retrieve groups, directory roles, and administrative units that the user is a member through transitive membership, use the List user transitive memberOf API.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-list-memberof?view=graph-rest-1.0
       operationId: user_ListMemberGraphOPre
       parameters:
         - name: user-id
@@ -1905,7 +1922,11 @@ paths:
     get:
       tags:
         - users.directoryObject
-      summary: Get the item of type microsoft.graph.directoryObject as microsoft.graph.group
+      summary: List a user's direct memberships
+      description: 'Get groups, directory roles, and administrative units that the user is a direct member of. This operation isn''t transitive. To retrieve groups, directory roles, and administrative units that the user is a member through transitive membership, use the List user transitive memberOf API.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-list-memberof?view=graph-rest-1.0
       operationId: user_GetMemberGraphOPreAsGroup
       parameters:
         - name: user-id
@@ -2199,7 +2220,11 @@ paths:
     get:
       tags:
         - users.directoryObject
-      summary: Get the items of type microsoft.graph.group in the microsoft.graph.directoryObject collection
+      summary: List a user's direct memberships
+      description: 'Get groups, directory roles, and administrative units that the user is a direct member of. This operation isn''t transitive. To retrieve groups, directory roles, and administrative units that the user is a member through transitive membership, use the List user transitive memberOf API.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-list-memberof?view=graph-rest-1.0
       operationId: user_ListMemberGraphOPreAsGroup
       parameters:
         - name: user-id
@@ -2299,7 +2324,11 @@ paths:
     get:
       tags:
         - users.oAuth2PermissionGrant
-      summary: Get oauth2PermissionGrants from users
+      summary: List a user's oauth2PermissionGrants
+      description: 'Retrieve a list of oAuth2PermissionGrant entities, which represent delegated permissions granted to enable a client application to access an API on behalf of the user.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-list-oauth2permissiongrants?view=graph-rest-1.0
       operationId: user_ListOauth2PermissionGrant
       parameters:
         - name: user-id
@@ -2482,6 +2511,7 @@ paths:
           x-ms-docs-key-type: user
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
+        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -2676,6 +2706,7 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: user
+        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -4084,6 +4115,7 @@ paths:
       tags:
         - users.profilePhoto
       summary: Get media content for the navigation property photo from users
+      description: The user's profile photo. Read-only.
       operationId: user_GetPhotoContent
       parameters:
         - name: user-id
@@ -4104,11 +4136,11 @@ paths:
                 format: binary
         default:
           $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
     put:
       tags:
         - users.profilePhoto
       summary: Update media content for the navigation property photo in users
+      description: The user's profile photo. Read-only.
       operationId: user_SetPhotoContent
       parameters:
         - name: user-id
@@ -4132,7 +4164,32 @@ paths:
           description: Success
         default:
           $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - users.profilePhoto
+      summary: Delete media content for the navigation property photo in users
+      description: The user's profile photo. Read-only.
+      operationId: user_DeletePhotoContent
+      parameters:
+        - name: user-id
+          in: path
+          description: The unique identifier of user
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: user
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
   '/users/{user-id}/photos':
     get:
       tags:
@@ -4151,7 +4208,9 @@ paths:
           x-ms-docs-key-type: user
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
+        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
+        - $ref: '#/components/parameters/count'
         - name: $orderby
           in: query
           description: Order items by property values
@@ -4230,6 +4289,7 @@ paths:
       tags:
         - users.profilePhoto
       summary: Get media content for the navigation property photos from users
+      description: The unique identifier for an entity. Read-only.
       operationId: user_GetPhotosContent
       parameters:
         - name: user-id
@@ -4258,11 +4318,11 @@ paths:
                 format: binary
         default:
           $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
     put:
       tags:
         - users.profilePhoto
       summary: Update media content for the navigation property photos in users
+      description: The unique identifier for an entity. Read-only.
       operationId: user_SetPhotosContent
       parameters:
         - name: user-id
@@ -4294,7 +4354,40 @@ paths:
           description: Success
         default:
           $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - users.profilePhoto
+      summary: Delete media content for the navigation property photos in users
+      description: The unique identifier for an entity. Read-only.
+      operationId: user_DeletePhotosContent
+      parameters:
+        - name: user-id
+          in: path
+          description: The unique identifier of user
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: user
+        - name: profilePhoto-id
+          in: path
+          description: The unique identifier of profilePhoto
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: profilePhoto
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
   '/users/{user-id}/registeredDevices':
     get:
       tags:
@@ -5053,7 +5146,11 @@ paths:
     get:
       tags:
         - users.userSettings
-      summary: Get shiftPreferences from users
+      summary: Get shiftPreferences
+      description: Retrieve the properties and relationships of a shiftPreferences object by ID.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/shiftpreferences-get?view=graph-rest-1.0
       operationId: user.setting_GetShiftPreference
       parameters:
         - name: user-id
@@ -5097,7 +5194,11 @@ paths:
     patch:
       tags:
         - users.userSettings
-      summary: Update the navigation property shiftPreferences in users
+      summary: Update shiftPreferences
+      description: Update the properties and relationships of a shiftPreferences object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/shiftpreferences-put?view=graph-rest-1.0
       operationId: user.setting_UpdateShiftPreference
       parameters:
         - name: user-id
@@ -5681,8 +5782,11 @@ paths:
     get:
       tags:
         - users.directoryObject
-      summary: Get sponsors from users
-      description: 'The users and groups responsible for this guest user''s privileges in the tenant and keep the guest user''s information and access updated. (HTTP Methods: GET, POST, DELETE.). Supports $expand.'
+      summary: List sponsors
+      description: Get a user's sponsors. Sponsors are users and groups that are responsible for this guest's privileges in the tenant and for keeping the guest's information and access up to date.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-list-sponsors?view=graph-rest-1.0
       operationId: user_ListSponsor
       parameters:
         - name: user-id
@@ -6907,6 +7011,7 @@ paths:
       tags:
         - users.todo
       summary: Get media content for the navigation property attachments from users
+      description: The unique identifier for an entity. Read-only.
       operationId: user.todo.list.task_GetAttachmentsContent
       parameters:
         - name: user-id
@@ -6951,11 +7056,11 @@ paths:
                 format: binary
         default:
           $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
     put:
       tags:
         - users.todo
       summary: Update media content for the navigation property attachments in users
+      description: The unique identifier for an entity. Read-only.
       operationId: user.todo.list.task_SetAttachmentsContent
       parameters:
         - name: user-id
@@ -7003,7 +7108,56 @@ paths:
           description: Success
         default:
           $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - users.todo
+      summary: Delete media content for the navigation property attachments in users
+      description: The unique identifier for an entity. Read-only.
+      operationId: user.todo.list.task_DeleteAttachmentsContent
+      parameters:
+        - name: user-id
+          in: path
+          description: The unique identifier of user
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: user
+        - name: todoTaskList-id
+          in: path
+          description: The unique identifier of todoTaskList
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: todoTaskList
+        - name: todoTask-id
+          in: path
+          description: The unique identifier of todoTask
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: todoTask
+        - name: attachmentBase-id
+          in: path
+          description: The unique identifier of attachmentBase
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: attachmentBase
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
   '/users/{user-id}/todo/lists/{todoTaskList-id}/tasks/{todoTask-id}/attachments/$count':
     get:
       tags:
@@ -7319,7 +7473,6 @@ paths:
                 format: binary
         default:
           $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
     put:
       tags:
         - users.todo
@@ -7376,7 +7529,56 @@ paths:
                 $ref: '#/components/schemas/microsoft.graph.attachmentSession'
         default:
           $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - users.todo
+      summary: Delete content for the navigation property attachmentSessions in users
+      description: The content streams that are uploaded.
+      operationId: user.todo.list.task_DeleteAttachmentSessionsContent
+      parameters:
+        - name: user-id
+          in: path
+          description: The unique identifier of user
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: user
+        - name: todoTaskList-id
+          in: path
+          description: The unique identifier of todoTaskList
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: todoTaskList
+        - name: todoTask-id
+          in: path
+          description: The unique identifier of todoTask
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: todoTask
+        - name: attachmentSession-id
+          in: path
+          description: The unique identifier of attachmentSession
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: attachmentSession
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
   '/users/{user-id}/todo/lists/{todoTaskList-id}/tasks/{todoTask-id}/attachmentSessions/$count':
     get:
       tags:
@@ -8478,8 +8680,11 @@ paths:
     get:
       tags:
         - users.directoryObject
-      summary: Get transitiveMemberOf from users
-      description: 'The groups, including nested groups, and directory roles that a user is a member of. Nullable.'
+      summary: List a user's memberships (direct and transitive)
+      description: 'Get groups, directory roles, and administrative units that the user is a member of through either direct or transitive membership.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/user-list-transitivememberof?view=graph-rest-1.0
       operationId: user_ListTransitiveMemberGraphOPre
       parameters:
         - name: user-id
